bold transcripts and 404

--- a/_pages/podcast-episodes/ep-006.md
+++ b/_pages/podcast-episodes/ep-006.md
@@ -10,10 +10,10 @@ source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/006-Dave-Albe
 show: false
 ---
 
-Dave: Hello and welcome to the podcast. I'm your host, Dave Albert. In this show, I talked about technology, building a company as a CTO, and co-founder and have guests to discuss their roles in technology and entrepreneurship.
+**Dave**: Hello and welcome to the podcast. I'm your host, Dave Albert. In this show, I talked about technology, building a company as a CTO, and co-founder and have guests to discuss their roles in technology and entrepreneurship.
 
 
-Dave: Hello friends. So last night I went to a meetup of Dublin indie hackers with Cortland Allen. Allen, the founder of indie hackers, and John Collison, one of the co founders of stripe. Indie hackers, is a place where founders of profitable businesses and side projects can share their stories transparently where entrepreneurs can come to read and learn from those examples. It's also a community of individuals, Indie hackers come together to share their experiences, give and receive feedback and rely on each other for support. Indie hackers was created in August of 2016 and April of 2017, it was acquired by stripe. So I'm sure anyone listening to this knows what stripe is, but in case you don't, it's a payment processor which provides API's which enable developers to create websites that can accept payment easily. So the brothers that founded strike we're finding it very frustrating that there was no good tool to accept payments. And so basically that became their startup as opposed to whatever it was that they were working on before the guy that was interviewed last night, John Collison. He and his brother are basically the youngest self made billionaires in the world so it was a really interesting talk and I wanted to lay down some of the the interesting bits that I took away from the interview. So, asked what the early decisions that mattered to John, he the the bits I took away from it were the deciding to start in the face of naysayers, regulations and what feels like being late to market that the most important thing was being willing to take on a space, even if it feels feels like it's already full. So as Slack started, even though there were a number of chat type tools and HipChat, that slack didn't think that it was done right. But they went ahead and and and built their product anyway because it wasn't really feeling the need of the people. So everything else sucked.They knew they could do it better and so they did.
+**Dave**: Hello friends. So last night I went to a meetup of Dublin indie hackers with Cortland Allen. Allen, the founder of indie hackers, and John Collison, one of the co founders of stripe. Indie hackers, is a place where founders of profitable businesses and side projects can share their stories transparently where entrepreneurs can come to read and learn from those examples. It's also a community of individuals, Indie hackers come together to share their experiences, give and receive feedback and rely on each other for support. Indie hackers was created in August of 2016 and April of 2017, it was acquired by stripe. So I'm sure anyone listening to this knows what stripe is, but in case you don't, it's a payment processor which provides API's which enable developers to create websites that can accept payment easily. So the brothers that founded strike we're finding it very frustrating that there was no good tool to accept payments. And so basically that became their startup as opposed to whatever it was that they were working on before the guy that was interviewed last night, John Collison. He and his brother are basically the youngest self made billionaires in the world so it was a really interesting talk and I wanted to lay down some of the the interesting bits that I took away from the interview. So, asked what the early decisions that mattered to John, he the the bits I took away from it were the deciding to start in the face of naysayers, regulations and what feels like being late to market that the most important thing was being willing to take on a space, even if it feels feels like it's already full. So as Slack started, even though there were a number of chat type tools and HipChat, that slack didn't think that it was done right. But they went ahead and and and built their product anyway because it wasn't really feeling the need of the people. So everything else sucked.They knew they could do it better and so they did.
 
 The next or the other early decision that mattered to stripe was that they focused on the developers so both as product market fit as well as scratching their own itch, so they had a problem, they solve their problem and also making the barrier to entry very low that developers were able to pick it, stripe it is and implement it on their own without having to go through a long procurement process that many of the products out there, they would just be giving their pitch to the business while the developers that already implemented stripe, so making it easy for developers to use their tool and the changing atmosphere where developers are empowered and also the low cost of entry.
 
