--- a/_pages/podcast-episodes/ep-016.md
+++ b/_pages/podcast-episodes/ep-016.md
@@ -12,11 +12,11 @@ show: false
 
 
 
-Dave: Hello, and welcome to the podcast. I'm your host, Dave Albert. In the show, I talked about technology, building a company as a CTO, and co founder and have guests to discuss their roles in technology and entrepreneurship.
+**Dave**: Hello, and welcome to the podcast. I'm your host, Dave Albert. In the show, I talked about technology, building a company as a CTO, and co founder and have guests to discuss their roles in technology and entrepreneurship.
 
 
 
-Dave: We're back after a break for the holidays and the rush of the end of December. I'm finally back with some more episodes. I've got a number of great interviews, lined up interviews. That's not really the right word. You know what I mean? I'm guest episodes where I get the have some unique discussions with some very interesting people. We had our bi-annual I guess team meetup, where some of the, the folks we have in India came over to visit and had a number of team sessions. I think we got ourselves in a really good spot procedurally , we worked on how we were going to work with product board to make the work more visible, more targeted at the actual value that gets delivered and are using it a bit more within our stand ups. And that's making grooming go a little bit better. This was before the end of the year break. So last week was a little rocky just because so many people had taken some time off and we needed to reorient ourselves after the new year. There were a few things that I've really realized and learned between the team sessions and what I found after after the break that I wanted to share.
+**Dave**: We're back after a break for the holidays and the rush of the end of December. I'm finally back with some more episodes. I've got a number of great interviews, lined up interviews. That's not really the right word. You know what I mean? I'm guest episodes where I get the have some unique discussions with some very interesting people. We had our bi-annual I guess team meetup, where some of the, the folks we have in India came over to visit and had a number of team sessions. I think we got ourselves in a really good spot procedurally , we worked on how we were going to work with product board to make the work more visible, more targeted at the actual value that gets delivered and are using it a bit more within our stand ups. And that's making grooming go a little bit better. This was before the end of the year break. So last week was a little rocky just because so many people had taken some time off and we needed to reorient ourselves after the new year. There were a few things that I've really realized and learned between the team sessions and what I found after after the break that I wanted to share.
 
 So one of the first things will be that we had this session during the team meetup that was called What if so, we had we just the proposed questions, or Julie had some questions for us that we all gave input on before the meeting the week of the meetings, and she organized it into this, what if session, so I can't remember all the different what ifs. But for instance, what if we had to acquire a certain number of users within a month without taking into account budget or anything like that, just to think more creatively about different areas that we'd already been, you know, working on, but how we might be able to trigger some some thoughts that hadn't occurred to us by removing some constraints and adding additional constraints that weren't there before, I thought it was a really useful session to that is not so far off of how the episode kind of birth and the episode with the podcast kind of got rolling after that first rough year, it was kind of what if I just started doing it, but they're like, separate different types of positives, I suppose the the idea is to take some some specific area that you're trying to work on. And, you know, it was kind of like a brainstorming tool, I suppose. And then afterwards, you can go through and refine what is really doable, let's not we I know we came up with a number of no brainer things throughout all of our sessions. And that's, that's really one of the greatest things about having the whole team together, is we go through and identify some of the longer term, what are some of the, the more idealistic ways that we might go and achieve some of our desired results. But then also, it's easier to spot things that we just should obviously just do now that don't require large amounts of planning or large amounts of development work, they're small steps towards our goals that we can make quite easily. It just seems so much easier to do that when we're all in the same room together. And if map things out more visually, with, you know, post it or flip charts or whiteboards or, or things like that.
 
