--- a/_pages/podcast-episodes/ep-034.md
+++ b/_pages/podcast-episodes/ep-034.md
@@ -11,19 +11,19 @@ image: /images/guests/Vessy-Tasheva.jpg
 show: false
 ---
 
-Dave: Hey everybody! So this is the second episode in the series. Well, in the couple. This is Vessy Tasheva she created the diversity in the workplace report and also has created vessy.com which is a platform for assisting the people leading the charge of the diversity and inclusion, also known as DNI within their own companies, this platform helps share experiences and somewhat of an emotional support system for the people who are involved in these activities. Well, emotional support may not necessarily be hundred percent exactly what it is. It's emotional, mental, tactical, it's just a gathering where those involved with DNI can share experiences and help each other do what it is that you're doing better. So I hope you enjoy. Oh, but if you haven't listened to the previous episode with Tom Shawl that might be useful to listen to first. They're not necessarily dependent upon each other but it was recorded first and he introduced me to Vessy. So I hope you enjoy.
+**Dave**: Hey everybody! So this is the second episode in the series. Well, in the couple. This is Vessy Tasheva she created the diversity in the workplace report and also has created vessy.com which is a platform for assisting the people leading the charge of the diversity and inclusion, also known as DNI within their own companies, this platform helps share experiences and somewhat of an emotional support system for the people who are involved in these activities. Well, emotional support may not necessarily be hundred percent exactly what it is. It's emotional, mental, tactical, it's just a gathering where those involved with DNI can share experiences and help each other do what it is that you're doing better. So I hope you enjoy. Oh, but if you haven't listened to the previous episode with Tom Shawl that might be useful to listen to first. They're not necessarily dependent upon each other but it was recorded first and he introduced me to Vessy. So I hope you enjoy.
  
-Dave: Hello and welcome to the podcast. I'm your host David Albert. In this show I talk about technology, building a company as a CTO and co-founder, and have guests to discuss their roles in technology and entrepreneurship.
+**Dave**: Hello and welcome to the podcast. I'm your host David Albert. In this show I talk about technology, building a company as a CTO and co-founder, and have guests to discuss their roles in technology and entrepreneurship.
 
 Today we're joined by Vessy Tasheva. Tom Shaw, the episode is probably the episode just before this, where we discussed the diversity manifesto, told me I should reach out to you. So thanks for joining us. And can you tell us a bit about yourself and the diversity in the workplace report? 
 
-Vessy: Thanks for having me. Sure. So back in January, I published 2019 diversity in the workplace report, and it covered 10 companies from 10 countries, on how they approach diversity and inclusion and as you can imagine, it was very easy to come up with the companies from, you know, Western European countries or the US, etc. 
+**Vessy**: Thanks for having me. Sure. So back in January, I published 2019 diversity in the workplace report, and it covered 10 companies from 10 countries, on how they approach diversity and inclusion and as you can imagine, it was very easy to come up with the companies from, you know, Western European countries or the US, etc. 
 
 And I was really, I'm really happy that I committed when I announced that I'm starting to reach out to companies and people to 10 companies from 10 countries because it was becoming really, really hard to find those in some of the other countries. But I think it made a really strong points that it's not something, you know, Western, you know, like Western values or whatever. It's, it's universal and it exists everywhere and we can find good role models in every country. 
 
-Dave: So what interested you in creating that report? 
+**Dave**: So what interested you in creating that report? 
 
-Vessy: I get this a lot. Um, it was, it was out of frustration. You know, it was out of I was listening recently to a podcast where Joe an old friend of mine was the guest and he's a serial entrepreneur. And he was explaining how entrepreneurs really get like, obsessed with something and they just cannot. I think he used the word, the word compulsive. And, you know, I think challenges related to diversity and inclusion have always bothered me.
+**Vessy**: I get this a lot. Um, it was, it was out of frustration. You know, it was out of I was listening recently to a podcast where Joe an old friend of mine was the guest and he's a serial entrepreneur. And he was explaining how entrepreneurs really get like, obsessed with something and they just cannot. I think he used the word, the word compulsive. And, you know, I think challenges related to diversity and inclusion have always bothered me.
 
 And I have, you know, pushed or attempted to push the organizations that I have been working with or in to do work around this when you know when there have been problems around it. But like the last problems that were that I was experiencing, it really felt like a compulsion. I was, I just couldn't, I just couldn't give up. And I saw Okay, you know, maybe I will not have results in this organization, but it doesn't mean I should give up.
 
@@ -37,29 +37,29 @@ And at the time, that I interviewed them, they were established only a year ago,
 
 But you can see like there are companies that have 1000 employees and are literally doing their very first step now, and there are others who have just established the company and are starting to think about it and doing work around that. So there is like you, you can be late to this. Ideally, you start from day one, and that's the easiest moment to start. 
 
-Dave: But if you didn't start then today is better than tomorrow.
+**Dave**: But if you didn't start then today is better than tomorrow.
 
-Vessy: I compare it to the tech legacy you would have in your product it's there and probably things are working and you know, there are bits that are not ideal, but if you postpone it for too long and DNI is culture. So if you ignore your culture for too long, and maybe your it doesn't mean that you are doing zero, you know, in regards to your culture, maybe you still have like small rituals or whatever in the organizations. 
+**Vessy**: I compare it to the tech legacy you would have in your product it's there and probably things are working and you know, there are bits that are not ideal, but if you postpone it for too long and DNI is culture. So if you ignore your culture for too long, and maybe your it doesn't mean that you are doing zero, you know, in regards to your culture, maybe you still have like small rituals or whatever in the organizations. 
 
 We're not saying it's completely forgotten. But if you're not careful with things, and especially in terms of inclusion and belonging, things can go really wrong in a matter of seconds. And I have seen these happening organizations that are one type of culture and one moment and literally within months have a completely different culture and the way people will describe it. Like the language has changed dramatically.
 
-Dave: So it's like how technical debt charges interest so that's cultural.
+**Dave**: So it's like how technical debt charges interest so that's cultural.
 
-Vessy: Yeah, so I think you objectively know how things are up to one point, and then it becomes a blur because you have been postponing it for so long then you like, well, it's been okay for, let's say, two years of having the billing process set up this way, whatever. So maybe we can extend to another year, but then six months into it, something really bad happens and that's it. You have actually missed the moment and it will take like maybe a year and a half to go back to somewhat of a good place and it will be quite compromised. 
+**Vessy**: Yeah, so I think you objectively know how things are up to one point, and then it becomes a blur because you have been postponing it for so long then you like, well, it's been okay for, let's say, two years of having the billing process set up this way, whatever. So maybe we can extend to another year, but then six months into it, something really bad happens and that's it. You have actually missed the moment and it will take like maybe a year and a half to go back to somewhat of a good place and it will be quite compromised. 
 
-Dave: I see. From the report, what surprising information you find? If any?
+**Dave**: I see. From the report, what surprising information you find? If any?
 
-Vessy: Let me think about it. 
+**Vessy**: Let me think about it. 
 
-Dave: Oh, we can come back to that one then. What was not a surprise, if you want to start there?
+**Dave**: Oh, we can come back to that one then. What was not a surprise, if you want to start there?
 
-Vessy: I think it was a surprise that even people who have like over two decades of experience in diversity and inclusion, not always feel they have the authority and they have the resources to do the work that they want to do.
+**Vessy**: I think it was a surprise that even people who have like over two decades of experience in diversity and inclusion, not always feel they have the authority and they have the resources to do the work that they want to do.
 
 It's a role that requires access to the leadership team, being part of the leadership team, having authority over the organization influence over the organization. And these are a lot of requirements. You know, if you're a DNI officer or a volunteer who has kind of like taken over this on top of their main job, mind function, these are a lot of requirements to help you get the job done. Does that make sense? I can make it more specific if it's..
 
-Dave: It does mostly but it wouldn't hurt to clarify.
+**Dave**: It does mostly but it wouldn't hurt to clarify.
 
-Vessy: So for example, Jason Thompson is the VP of inclusion and diversity at TechStars.  And, you know, so TechStars have invested in thousands of startups around the world. You know, the huge, huge community of entrepreneurs globally. And you know, so Jason is someone at the VP level, he reports directly to the CEO who has been assigned by the CEO of TechStars, who is also the founder of TechStars. 
+**Vessy**: So for example, Jason Thompson is the VP of inclusion and diversity at TechStars.  And, you know, so TechStars have invested in thousands of startups around the world. You know, the huge, huge community of entrepreneurs globally. And you know, so Jason is someone at the VP level, he reports directly to the CEO who has been assigned by the CEO of TechStars, who is also the founder of TechStars. 
 
 So that gives him access to the, you know, decision maker at the very top, access to the board members, other C level executives, etc. That doesn't necessarily guarantee that he would have a big enough budget for the work that he needs to do or that he would have a team and something that he was sharing. So he has been he used to DNI for the US Olympics Committee before this role, and he has been in the industry for he was actually laughing about it. 
 
@@ -73,9 +73,9 @@ So if they have like an office in the UK, you know, they're doing that in one wa
 
 So they took the lead they were the first corporation to open conversation about this. So it wasn't just left to the NGOs. So over time other organizations also petition to say, Hey, you know, homosexuality is not a crime, because that was still the way it was legally set up in India. And then, you know, it was a legacy, you know, from from the old days, and then so back in September, it was finally removed like it was their legalized. Is that the word? When something is.
 
-Dave: Decriminalized? 
+**Dave**: Decriminalized? 
 
-Vessy: Thank you, decriminalized. Yeah, so it was decriminalized in September, and they played a really critical role. So this is one of the stories in the report on how thought works, approached it. So So if we go back to the criteria on what kind of determines if you will be successful with diversity and inclusion, it's not surprising that the founders, the DNI of the culture, like the core of it is critical. 
+**Vessy**: Thank you, decriminalized. Yeah, so it was decriminalized in September, and they played a really critical role. So this is one of the stories in the report on how thought works, approached it. So So if we go back to the criteria on what kind of determines if you will be successful with diversity and inclusion, it's not surprising that the founders, the DNI of the culture, like the core of it is critical. 
 
 Then the second piece is, why is DNI important for our specific organization, not for some other organization, like we kind of all knows, it could be, because it's the right thing to do. It could be because it's, we want our employees to be happy to be more productive, so you know, to be more engaged, so it helps with employee retention, you know, that saves costs, etc. Or it could be to be, you know, to collaborate more to innovate more, again, business benefits from that and then it also helps us acquire new markets faster.
 
@@ -85,13 +85,13 @@ There are a lot of companies where it's kind of like the CEO gives a call to HR 
 
 It can leave the organization feeling like it's a theme for this year. And then the year is over. And people are like Hey, why are we Why are we still doing DNI stuff? I thought we were turning it with inclusion. It was a priority last year. And it's not how it works, right? But it's not for, you know, the average employee to understand that. It's important how we communicate it.
 
-Dave: Just like how, every year, we went to make money.
+**Dave**: Just like how, every year, we went to make money.
 
-Vessy: Yeah, yeah. Yeah, actually going back to you know, Jason, when I mentioned earlier, he was comparing it with sales targets is like, yeah, the fact that we have hit the target for this month doesn't mean you just all go on vacation and we're done for the rest of the company is like, yeah.
+**Vessy**: Yeah, yeah. Yeah, actually going back to you know, Jason, when I mentioned earlier, he was comparing it with sales targets is like, yeah, the fact that we have hit the target for this month doesn't mean you just all go on vacation and we're done for the rest of the company is like, yeah.
 
-Dave: That's what's so interesting that almost just because it will not just because but Influenced by their company culture, the thought works that that actually influenced the reality of a country. You know, it helped to drive change like that they're not 100% focused on that as a company, their company still made that positive change in a while.
+**Dave**: That's what's so interesting that almost just because it will not just because but Influenced by their company culture, the thought works that that actually influenced the reality of a country. You know, it helped to drive change like that they're not 100% focused on that as a company, their company still made that positive change in a while.
 
-Vessy: Yeah. And if you look into the story in the report about, because I was very curious why, like, why would you focus on, you know, activism around this specific area of awareness? What was a specific event that triggers you know, their action, attracted their attention and so on? And they said a few, a few of their employees in India requested to be transferred to the US.
+**Vessy**: Yeah. And if you look into the story in the report about, because I was very curious why, like, why would you focus on, you know, activism around this specific area of awareness? What was a specific event that triggers you know, their action, attracted their attention and so on? And they said a few, a few of their employees in India requested to be transferred to the US.
 
 When they asked, like, why is that the case? They said, Well, you know, we're, you know, we're gay people were we don't feel safe here, etc, etc, etc. And over time, you know, they were also hiring other we're working closely with LGBT organizations on the ground hiring people with, you know, the various backgrounds in general and profiles. And they were, you know, they were becoming an employer with more and more LGBTQ people, and it would have trans people as well.
 
@@ -99,13 +99,13 @@ And so they were, so imagine you're in a country where being homosexual is crimi
 
 I don't know, is this related to the transparent from the neighborhood where they live to the office or whatever it is, so they can accommodate for that? Because if your employee doesn't feel safe, yeah, probably they wouldn't be very productive. 
 
-Dave: Absolutely. That's amazing. What, uh, what kind of challenges do you think that you identified companies have that are maybe outside of the realm of just not doing it? You know, so, so challenges for increasing the diversity and inclusion, other than just not wanting it? And then making the question clear. 
+**Dave**: Absolutely. That's amazing. What, uh, what kind of challenges do you think that you identified companies have that are maybe outside of the realm of just not doing it? You know, so, so challenges for increasing the diversity and inclusion, other than just not wanting it? And then making the question clear. 
 
-Vessy: Yeah, so the question is, so the question is when they're doing something but it's not quite working. What are their challenges?
+**Vessy**: Yeah, so the question is, so the question is when they're doing something but it's not quite working. What are their challenges?
 
-Dave: Very well put thank you.
+**Dave**: Very well put thank you.
   
-Vessy: Yeah we can change seats for the next one. Well, something that happens quite often regardless of whether the good work is happening or not and companies can see results is that the people who are championing DNI feel very isolated. So this is something that where we put a lot of like it's emotional labor because we deeply care most people in this field would really really care it affects them in some way we know directly or indirectly for some reason they care and it's very similar to activism.
+**Vessy**: Yeah we can change seats for the next one. Well, something that happens quite often regardless of whether the good work is happening or not and companies can see results is that the people who are championing DNI feel very isolated. So this is something that where we put a lot of like it's emotional labor because we deeply care most people in this field would really really care it affects them in some way we know directly or indirectly for some reason they care and it's very similar to activism.
 
 So in activism, we will talk about you know, burnout because you know, those people are trying so hard working so hard and you don't always see the results. In the Unites similar, it's usually on top of your job. Resources started limited. You don't have a lot of time you don't have a big budget, you don't have a lot of people to help you. And you know, the majority of the organization doesn't really understand what you're doing, why you're doing, etc, or even if they're supportive, they probably don't understand the depth. So that you are dealing with really complex problems that you're not necessarily equipped with.
 
@@ -128,35 +128,35 @@ They're like, Okay, I get it. This is disappointing, but I don't think it's such
 So it's similar, you know, you can have people you can share with people who will not, but when they not who like, yeah, they know exactly what I'm going through, and it feels better and I can, you know, enjoy my weekend, because I just, I just, you know, had a chance to vent out and share it with others and you know, on the bright side, maybe they had some successes and we can just keep going instead of people are burning out and then leaving.
 You know, deciding not to champion DNA anymore and not, you know, not like their values have changed, but not to invest their time in this. 
 
-Dave: Yeah, somebody else can do this now I've been.
+**Dave**: Yeah, somebody else can do this now I've been.
 
-Vessy: And you know, and that's, that's fine. That's a personal choice. But what happens is that does open space for new people to come in and that's great.
+**Vessy**: And you know, and that's, that's fine. That's a personal choice. But what happens is that does open space for new people to come in and that's great.
 
-Dave: But all their learnings
+**Dave**: But all their learnings
 
-Vessy: Exactly. 
+**Vessy**: Exactly. 
 
-Dave: And understanding are leaving. 
+**Dave**: And understanding are leaving. 
 
-Vessy: Exactly so we start from scratch. So that's the points of the community and of course when people share their learnings and they share their journeys and the emotional journey as well. It's much easier to create collaborations because all of this accelerates trust and learning.
+**Vessy**: Exactly so we start from scratch. So that's the points of the community and of course when people share their learnings and they share their journeys and the emotional journey as well. It's much easier to create collaborations because all of this accelerates trust and learning.
 
-Dave: How does that group work? Do you have events is that what you?
+**Dave**: How does that group work? Do you have events is that what you?
 
-Vessy: So there are three parts of it. There is an online platform, then there's the the the the monthly member calls. Our next one is this Friday. So everyone joins and you know, we just chat for an hour. It's not too structured in terms of agenda is more like, Hey, what do you know, tell us what, what you've been up to. 
+**Vessy**: So there are three parts of it. There is an online platform, then there's the the the the monthly member calls. Our next one is this Friday. So everyone joins and you know, we just chat for an hour. It's not too structured in terms of agenda is more like, Hey, what do you know, tell us what, what you've been up to. 
 
 And then we also have invite-only events, and there throughout the year. So for example, this year, I had an event in Dublin in January, and April, it was in Sofia in Bulgaria. The next one is in Berlin in September, and the following one will be in San Francisco in January. 
 
-Dave: Okay, that's great, because I was gonna ask, Was this an Ireland thing or international thing? 
+**Dave**: Okay, that's great, because I was gonna ask, Was this an Ireland thing or international thing? 
 
-Vessy: Yeah, no. So the community is global. TUm, the records that I do are international, it will be hard to cover every single country. Yeah. Luckily with the community. There aren't as much constraints around that. And the events are, you know, a few events per year. And, of course, will be hard for every single member to join all of the events. But you know, at least we can cover a few geographies in this way. 
+**Vessy**: Yeah, no. So the community is global. TUm, the records that I do are international, it will be hard to cover every single country. Yeah. Luckily with the community. There aren't as much constraints around that. And the events are, you know, a few events per year. And, of course, will be hard for every single member to join all of the events. But you know, at least we can cover a few geographies in this way. 
 
-Dave: And where is this located? for people to find it?
+**Dave**: And where is this located? for people to find it?
 
-Vessy: vessy.com so I'm Vessy, the founder of vessy.com. That's vissy.com. Yeah, you can check it out. There's, there are a few things about the community there the upcoming events, you can find out about the reports and all of that. 
+**Vessy**: vessy.com so I'm Vessy, the founder of vessy.com. That's vissy.com. Yeah, you can check it out. There's, there are a few things about the community there the upcoming events, you can find out about the reports and all of that. 
 
-Dave: Yeah, I'll definitely put all of that in the show notes. You said you've been doing this for quite a number of years. How did you get involved initially?
+**Dave**: Yeah, I'll definitely put all of that in the show notes. You said you've been doing this for quite a number of years. How did you get involved initially?
 
-Vessy: So you know, when someone asked me like, when did you start with this? I say for about a year. But then it's like, that'll be like, hey, when did you start with this full time? We're like having this title or whatever, you know, saying like, I'm a diversity and inclusion champion now, you know, but it all started for me.
+**Vessy**: So you know, when someone asked me like, when did you start with this? I say for about a year. But then it's like, that'll be like, hey, when did you start with this full time? We're like having this title or whatever, you know, saying like, I'm a diversity and inclusion champion now, you know, but it all started for me.
 
 Let me see how many years that is ago, 2007. So actually, towards the end of 2006, I was going to one of my best friends on campus, I was like, I was like, I would always go to her very angry complaining about something. But it was always the same thing that I would be complaining about, I'm frustrated well, and that was the, you know, what was triggering all of this was my interactions with a close friend of mine who was also my roommate at the time. 
 
@@ -182,9 +182,9 @@ And you know what's funny? So my parents are both teachers without as an artist 
  
 And I was thinking wow, that's like that's such an exciting life you know, it's very, very interesting and I just have a normal family you know, a regular family regular life and then who knew that actually, you know, a few years later over like, things are not as regular as I thought. Yeah.
 
-Dave: What practical things can small companies, startups that just have a few people. What can they do to help and grain that was in their DNI to make sure that they don't get in that situation where they have that cultural depth in a year or two? 
+**Dave**: What practical things can small companies, startups that just have a few people. What can they do to help and grain that was in their DNI to make sure that they don't get in that situation where they have that cultural depth in a year or two? 
 
-Vessy: Yeah. Especially in a small company, when you can do things that are not scalable. I think one on ones are critical. And not just the one on one, you know, for us to talk about the operational bits and stuff like we're, as we are trying to figure out product-market fits or how to grow the business or what marketing channels work for us. We are also trying to figure out like, who you are and who I am.
+**Vessy**: Yeah. Especially in a small company, when you can do things that are not scalable. I think one on ones are critical. And not just the one on one, you know, for us to talk about the operational bits and stuff like we're, as we are trying to figure out product-market fits or how to grow the business or what marketing channels work for us. We are also trying to figure out like, who you are and who I am.
 
 And many startups, people are also very young and getting to know ourselves can be
 can be the opportunity or it could be our failure. As a startup, I have seen companies that have really done a great job connecting with their employees on a deeply emotional level, understanding their challenges, like many of the one on ones that I have had with people who have been reporting to me, are not really about work, we will talk about anything but work, it could be, like, you know, how the breakup with their partner went or what relationship they had with their parents.
@@ -203,25 +203,25 @@ And so imagine if you are on a team where people have 20 years or more of an age
 
 But on the other side, when you were young and energized and you try more new technology or whatever you just go out with more you would have different ideas and ideas that probably the other person wouldn't have. But you could also learn from their pace because you just maybe want to do a lot of things and just and that's also not scalable. So, you know, let's meet somewhere in the middle, have a steady pace and try new things, and use the knowledge of, you know, maybe a couple of decades in the workforce, but also, yeah, just not just do things the way we do things here. 
 
-Dave: That's one thing that we try really hard within our company to do is to make sure that we don't do anything because that's what we've done. I mean, you know, we're still young, the company, I'm not in my 40s now, and I barely know myself. I try really hard to keep learning and growing, but I don't know anything. I can tell you a million mistakes I've made over time and I try not to repeat the mistakes but I nobody knows anything. We're all just kind of floating along trying our best. So I don't know, I don't know what age you get to be a grown-up. I sure don't feel like one yet. 
+**Dave**: That's one thing that we try really hard within our company to do is to make sure that we don't do anything because that's what we've done. I mean, you know, we're still young, the company, I'm not in my 40s now, and I barely know myself. I try really hard to keep learning and growing, but I don't know anything. I can tell you a million mistakes I've made over time and I try not to repeat the mistakes but I nobody knows anything. We're all just kind of floating along trying our best. So I don't know, I don't know what age you get to be a grown-up. I sure don't feel like one yet. 
 
-Vessy: You know, I think it took me about 10 years of work experience to figure out that no one knows what they're doing. They're just, you know, trying their best. And it doesn't matter if they're the CEO of a bank or you know, the youngest employee in a startup or whatever. Everyone is just trying to make it work. 
+**Vessy**: You know, I think it took me about 10 years of work experience to figure out that no one knows what they're doing. They're just, you know, trying their best. And it doesn't matter if they're the CEO of a bank or you know, the youngest employee in a startup or whatever. Everyone is just trying to make it work. 
 
-Dave: It's like, in school. I don't know if your books were like this, but the teachers edition, always had the answers in the back of the book. 
+**Dave**: It's like, in school. I don't know if your books were like this, but the teachers edition, always had the answers in the back of the book. 
 
-Vessy: No, we did not have that.
+**Vessy**: No, we did not have that.
 
-Dave: Well that's what I guess I always assumed being grown-up was is that you had the answers. Nobody's got any answers. Everybody's just got questions and probably some Yeah, that's not gonna work because every other time I've tried that, I fall into my face. So I guess, hoping that there were answers in the back of the book when you got older, but help and so far I haven't found the answers, but I'm not going to stop looking. 
+**Dave**: Well that's what I guess I always assumed being grown-up was is that you had the answers. Nobody's got any answers. Everybody's just got questions and probably some Yeah, that's not gonna work because every other time I've tried that, I fall into my face. So I guess, hoping that there were answers in the back of the book when you got older, but help and so far I haven't found the answers, but I'm not going to stop looking. 
 
-Vessy: I think it's a, it's a very good comparison. I felt that, you know, like in school, if you study hard and you understand the logic of things, you can solve a math problem or you know, you can write an essay. So, with some discipline, and maybe some self reflection, whatever, some hard work, you can make it and then, you know, starting, you know, my first job and then second and so on. 
+**Vessy**: I think it's a, it's a very good comparison. I felt that, you know, like in school, if you study hard and you understand the logic of things, you can solve a math problem or you know, you can write an essay. So, with some discipline, and maybe some self reflection, whatever, some hard work, you can make it and then, you know, starting, you know, my first job and then second and so on. 
 
 I've been in quite a few companies I actually figured out that that's not how it works. It isn't just about the hard work or the support. It's much, much more complicated. And yeah, no one tells you like, because it's cool. If you do x and y, you get the score. But in life, if you do, you know, X and Y it actually changes. Maybe this time will work and other time won't work. And it's, it's not everything is about AB testing and experiments like marketing experiments and so on. 
 
 It's, it's just much more complex. So I think I also felt similar to you, a bit cheated. That I knew how things work in life with hard work and discipline, you know, things happen, and I was like, nope, it's something else and I don't know what I'm doing. Let's hope for the best. 
 
-Dave: Absolutely. How can you help increase the diversity and inclusion for roles that you don't really get that many diverse applicants for? So, I've posted a number of technical jobs, and there are very few female applicants. Very few. Like even interviewing 100% of the female applicants, they're still maybe, you know, 1% of the interviewees. So what can we do?
+**Dave**: Absolutely. How can you help increase the diversity and inclusion for roles that you don't really get that many diverse applicants for? So, I've posted a number of technical jobs, and there are very few female applicants. Very few. Like even interviewing 100% of the female applicants, they're still maybe, you know, 1% of the interviewees. So what can we do?
 
-Vessy: So, it sounds like you know where to post your job ads and gets the other parts of the talent. How about just go somewhere else? Because if we post our jobs in the places where we don't get, you know, candidates from underrepresented groups that you know, diverse skin whatever you want to call it, then that's just the wrong place to get them. Like we cannot, like if you post one job and you get three, let's say, female engineers, it's not like if you post nine, or like three jobs and you get three times more, etc, etc. I probably did the math wrong. I'm actually good in math. I think you've got the logic ignore it.
+**Vessy**: So, it sounds like you know where to post your job ads and gets the other parts of the talent. How about just go somewhere else? Because if we post our jobs in the places where we don't get, you know, candidates from underrepresented groups that you know, diverse skin whatever you want to call it, then that's just the wrong place to get them. Like we cannot, like if you post one job and you get three, let's say, female engineers, it's not like if you post nine, or like three jobs and you get three times more, etc, etc. I probably did the math wrong. I'm actually good in math. I think you've got the logic ignore it.
 
 But it's no, just probably the female engineers hang out somewhere else. So that would be one thing. So do you go to those places? Do you know where they are? Where they do you talk to them? So that's right. So you know, before we started the episode, he said that you have some women in your own you're on your team. So where do they go like literally where do they hang out? And maybe not only networking or tech events or startup events, like, even if you want Yeah, maybe like going to bars where they hang out with would be a bit weird.
 
@@ -243,21 +243,21 @@ Because usually in a startup, we might be like, Hey, I'll have them I'll have a 
 
 So yeah, I think that will be also very helpful. So what's your process? And what changes can you make? So that it's not only let's say, male engineers, who decide if this person goes from stage one to stage two and so on, you know, in this particular example,
 
-Dave: That's really good information. Is there anything else about your work recently that we haven't covered? Because I kind of run out of questions for my list. I mean, I could talk to you for hours. I really could. But, you know, we're nearing an hour now. So, if there's anything key that I missed out on asking you.
+**Dave**: That's really good information. Is there anything else about your work recently that we haven't covered? Because I kind of run out of questions for my list. I mean, I could talk to you for hours. I really could. But, you know, we're nearing an hour now. So, if there's anything key that I missed out on asking you.
 
-Vessy: I would be curious. You know, and that's more for the listeners. Um, yeah, like, as we're entering the second half of the year. I'd be curious who among you are doing work related to DNI in some capacity. Like, I'll be working on the next report very soon. The one for 2020. And, yeah, it will be like feel free to reach out and it'll be great to talk to some of you. And hear how you approach things because these are like diversity and inclusion is such a complicated area with so many variables, so many layers. 
+**Vessy**: I would be curious. You know, and that's more for the listeners. Um, yeah, like, as we're entering the second half of the year. I'd be curious who among you are doing work related to DNI in some capacity. Like, I'll be working on the next report very soon. The one for 2020. And, yeah, it will be like feel free to reach out and it'll be great to talk to some of you. And hear how you approach things because these are like diversity and inclusion is such a complicated area with so many variables, so many layers. 
 
 And it's very helpful when we can show how different how it's tackled in different situations and not tackled in the way, like, done. Now we're done. And that's it. Let's see, we'll see what people were trying. So yeah, so if you feel free to reach out at vessy@vessy.com. And just give me a shout out. 
 
-Dave: Great. Yeah, I'll add all your details. And so vessel.com is the best place to get you or is there a social media platform that like, are you on Twitter? 
+**Dave**: Great. Yeah, I'll add all your details. And so vessel.com is the best place to get you or is there a social media platform that like, are you on Twitter? 
 
-Vessy: Yeah, I'm on Twitter, LinkedIn. Most you know, all of the places but yeah, Twitter, LinkedIn would be probably best, or just over email. 
+**Vessy**: Yeah, I'm on Twitter, LinkedIn. Most you know, all of the places but yeah, Twitter, LinkedIn would be probably best, or just over email. 
 
-Dave: Okay. Cool. Well, thank you so much for joining us. This was really good. I learned quite a few things that I think we can actually do, especially when we go looking for additional engineers. 
+**Dave**: Okay. Cool. Well, thank you so much for joining us. This was really good. I learned quite a few things that I think we can actually do, especially when we go looking for additional engineers. 
 
-Vessy: Awesome. Thank you so much for having me.
+**Vessy**: Awesome. Thank you so much for having me.
 
-Dave: It was a pleasure. And thank you all for listening.
+**Dave**: It was a pleasure. And thank you all for listening.
 
 Until next time remember any sufficiently advanced technology is indistinguishable from magic.
 
